2007-04-30  Matthias Clasen  <mclasen@redhat.com>

	* glib/glib.symbols:
	* glib/gregex.[hc]: Split GRegex into GRegex and GMatchInfo.
	(#419368, Marco Barisione)

	* tests/regex-test.c: Adapt.

2007-04-30  Chris Wilson  <chris@chris-wilson.co.uk>

	* glib/gbookmarkfile.c (g_bookmark_file_get_app_info):
	Include the gshell.h header file (to define g_shell_[un]quote)
	and correct the order of the arguments to g_propagate_error(), as
	spotted by gcc.

2007-04-29  Emmanuele Bassi  <ebassi@gnome.org>

	* glib/gbookmarkfile.c:
	(g_bookmark_file_set_app_info): Quote the passed command line...
	
	(g_bookmark_file_get_app_info): ... and unquote it when giving it
	back. (#432274)

2007-04-27  Matthias Clasen <mclasen@redhat.com>

	* glib/gstrfuncs.c: small coding style cleanups.

2007-04-27  Chris Wilson  <chris@chris-wilson.co.uk>

	* glib/gregex.h: Remove trailing comma at end of enumerator list.

2007-04-27  Tor Lillqvist  <tml@novell.com>

	* glib/gstdio.c (g_mkdir): Document that the mode argument is
	ignored on Windows
	(g_stat): Document that st_mode is mostly useless on Windows.

2007-04-25  Paolo Borelli  <pborelli@katamail.com>

	* glib/gstrfuncs.c (g_strsplit): small cleanup. (#433387)

2007-04-24  Matthias Clasen  <mclasen@redhat.com>

	* glib/glib.symbols:
	* glib/goption.h:
	* glib/goption.c (g_option_context_get_help): New function to
	get the formatted help string.  (#336089, Dom Lachowicz)

2007-04-24  Michael Natterer  <mitch@imendio.com>

	* tests/gobject/paramspec-test.c: test all GParamSpecString
	validations with static and allocated strings.

2007-04-19  William Jon McCann  <mccann@jhu.edu>

	* glib/gkeyfile.[ch]: (find_file_in_data_dirs),
	(g_key_file_load_from_dirs), (g_key_file_load_from_data_dirs):
	Add g_key_file_load_from_dirs for looking through a search
	path for a key-file. (#355334)

2007-04-15  Tor Lillqvist  <tml@novell.com>

	* build: Include the build module using the svn:externals
	mechanism.

	* Makefile.am